--- a/Mirko_v2/WykopAPI/packages.config
+++ b/Mirko_v2/WykopAPI/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fody" version="1.28.3" targetFramework="portable-win81+wpa81" developmentDependency="true" />
   <package id="MetroLog" version="0.8.7.1" targetFramework="portable-win81+wpa81" />
-  <package id="MetroLog.Targets" version="1.0.0.0" targetFramework="portable-win81+wpa81" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="portable-win81+wpa81" />
+  <package id="PropertyChanged.Fody" version="1.49.1" targetFramework="portable-win81+wpa81" developmentDependency="true" />
 </packages>
