--- a/Mirko_v2/Mirko_v2.WindowsPhone/packages.config
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="wpa81" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="wpa81" />
   <package id="MetroLog" version="0.8.7.1" targetFramework="wpa81" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="wpa81" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="wpa81" />
