AppHeader initial animation.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Mirko_v2.WindowsPhone.csproj
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Mirko_v2.WindowsPhone.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Pages\HashtagSelectionPage.xaml.cs">
       <DependentUpon>HashtagSelectionPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\IHaveAppBar.cs" />
     <Compile Include="Pages\PivotPage.xaml.cs">
       <DependentUpon>PivotPage.xaml</DependentUpon>
     </Compile>
