--- a/Mirko_v2/Mirko_v2.WindowsPhone/packages.config
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/packages.config
@@ -6,5 +6,6 @@
   <package id="MvvmLight" version="5.1.1.0" targetFramework="wpa81" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="wpa81" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="wpa81" />
+  <package id="NotificationsExtensions.Portable" version="1.0.3" targetFramework="wpa81" />
   <package id="WriteableBitmapEx" version="1.5.0.0" targetFramework="wpa81" />
 </packages>
