--- a/NotificationsExtensions/NotificationsExtensions.csproj
+++ b/NotificationsExtensions/NotificationsExtensions.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BadgeContent.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="ContentInterfaces.cs" />
+    <Compile Include="NotificationsManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TileContent.cs" />
     <Compile Include="ToastContent.cs" />
