--- a/BackgroundTasks/BackgroundTasks.csproj
+++ b/BackgroundTasks/BackgroundTasks.csproj
@@ -55,7 +55,10 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MetroLog">
-      <HintPath>..\packages\MetroLog.0.8.7.1\lib\portable-net45+wp8+win81+wpa81\MetroLog.dll</HintPath>
+      <HintPath>..\packages\MetroLog.0.8.9\lib\portable-net45+wp8+win81+wpa81\MetroLog.dll</HintPath>
+    </Reference>
+    <Reference Include="MetroLog.Platform">
+      <HintPath>..\packages\MetroLog.0.8.9\lib\wpa81\MetroLog.Platform.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\portable-net40+sl5+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
