--- a/Mirko_v2/Mirko_v2.WindowsPhone/packages.config
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/packages.config
@@ -6,5 +6,6 @@
   <package id="MvvmLight" version="5.1.1.0" targetFramework="wpa81" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="wpa81" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="wpa81" />
+  <package id="QKit" version="0.4.1" targetFramework="wpa81" />
   <package id="WriteableBitmapEx" version="1.5.0.0" targetFramework="wpa81" />
 </packages>
