--- a/Mirko_v2/Mirko_v2.WindowsPhone/Mirko_v2.WindowsPhone.csproj
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Mirko_v2.WindowsPhone.csproj
@@ -186,6 +186,7 @@
     <Content Include="Assets\appbar.social.twitter.hashtag.png" />
     <Content Include="Assets\appbar.text.bold.png" />
     <Content Include="Assets\appbar.text.italic.png" />
+    <Content Include="Assets\appheader_footer.png" />
     <Content Include="Assets\czacha.png" />
     <Content Include="Assets\gif_icon.png" />
     <Content Include="Assets\medium_badge.png" />
