Develop PaymentViewModel further. Disable it for a while.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/Mirko_v2.WindowsPhone.csproj
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Mirko_v2.WindowsPhone.csproj
@@ -203,6 +203,7 @@
     <Content Include="Assets\ust_transparent.png" />
     <Content Include="Assets\video_icon.png" />
     <Content Include="Assets\wide_badge.png" />
+    <Content Include="Assets\WindowsStoreProxy.xml" />
     <Content Include="FodyWeavers.xml" />
     <None Include="Package.StoreAssociation.xml" />
   </ItemGroup>
