--- a/Mirko_v2/Mirko_v2.WindowsPhone/packages.config
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/packages.config
@@ -3,6 +3,9 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="wpa81" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="wpa81" />
   <package id="MetroLog" version="0.8.9" targetFramework="wpa81" />
+  <package id="Microsoft.ApplicationInsights" version="1.1.0" targetFramework="wpa81" />
+  <package id="Microsoft.ApplicationInsights.PersistenceChannel" version="1.1.0" targetFramework="wpa81" />
+  <package id="Microsoft.ApplicationInsights.WindowsApps" version="1.1.0" targetFramework="wpa81" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="wpa81" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="wpa81" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="wpa81" />
