--- a/Mirko_v2/WykopSDK/packages.config
+++ b/Mirko_v2/WykopSDK/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.8.9" targetFramework="portable46-win81+wpa81" />
-  <package id="Fody" version="1.28.3" targetFramework="portable-win81+wpa81" developmentDependency="true" />
+  <package id="Fody" version="1.29.2" targetFramework="portable46-win81+wpa81" developmentDependency="true" />
   <package id="MetroLog" version="0.8.9" targetFramework="portable-win81+wpa81" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable-win81+wpa81" />
-  <package id="PropertyChanged.Fody" version="1.50.1" targetFramework="portable-win81+wpa81" developmentDependency="true" />
+  <package id="PropertyChanged.Fody" version="1.50.2" targetFramework="portable46-win81+wpa81" developmentDependency="true" />
 </packages>
